# spiceai

./: Cargo.toml
crates/runtime/: Cargo.toml
crates/runtime/src/: config.rs  lib.rs
crates/spiceraft/: Cargo.toml  build.rs
crates/spiceraft/proto/: raft.proto
crates/spiceraft/src/: consensus.rs  election_timer.rs  lib.rs  raft.rs
