[package]
name = "spiceraft"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
tonic.workspace = true
snafu.workspace = true
prost = { version = "0.12.1" }

[build-dependencies]
tonic-build = "0.11.0"
